✨ feat: implemented category routes
