# backend/src/category/dto/create-category.dto.ts
@@ -1,0 +1,10 @@
+import { IsNotEmpty, IsString } from 'class-validator';
+
+export class CreateCategoryDto {
+  @IsNotEmpty()
+  @IsString()
+  category_name: string;
+  @IsNotEmpty()
+  @IsString()
+  description?: string;
+}
