# backend/src/category/dto/update-category.dto.ts
@@ -1,0 +1,10 @@
+import { IsNotEmpty, IsString } from 'class-validator';
+
+export class UpdateCategoryDto {
+  @IsNotEmpty()
+  @IsString()
+  category_name?: string;
+  @IsNotEmpty()
+  @IsString()
+  description?: string;
+}
